docs-website/versioned_docs/version-0.10.4/graphql/mutations.md
---
id: mutations
title: Mutations
slug: mutations
sidebar_position: 2
---

## acceptRole

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Accept role using invite token

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#acceptroleinput"><code>AcceptRoleInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addGroupMembers

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add members to a group

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#addgroupmembersinput"><code>AddGroupMembersInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addLink

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add a link, or institutional memory, from a particular Entity

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#addlinkinput"><code>AddLinkInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addOwner

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add an owner to a particular Entity

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#addownerinput"><code>AddOwnerInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addOwners

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add multiple owners to a particular Entity

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#addownersinput"><code>AddOwnersInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addRelatedTerms

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add multiple related Terms to a Glossary Term to establish relationships

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#relatedtermsinput"><code>RelatedTermsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addTag

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add a tag to a particular Entity or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#tagassociationinput"><code>TagAssociationInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addTags

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add multiple tags to a particular Entity or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#addtagsinput"><code>AddTagsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addTerm

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add a glossary term to a particular Entity or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#termassociationinput"><code>TermAssociationInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## addTerms

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add multiple glossary terms to a particular Entity or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#addtermsinput"><code>AddTermsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchAddOwners

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add owners to multiple Entities

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchaddownersinput"><code>BatchAddOwnersInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchAddTags

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add tags to multiple Entities or subresources

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchaddtagsinput"><code>BatchAddTagsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchAddTerms

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Add glossary terms to multiple Entities or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchaddtermsinput"><code>BatchAddTermsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchAssignRole

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Batch assign roles to users

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchassignroleinput"><code>BatchAssignRoleInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchRemoveOwners

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove owners from multiple Entities

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchremoveownersinput"><code>BatchRemoveOwnersInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchRemoveTags

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove tags from multiple Entities or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchremovetagsinput"><code>BatchRemoveTagsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchRemoveTerms

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove glossary terms from multiple Entities or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchremovetermsinput"><code>BatchRemoveTermsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchSetDataProduct

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Batch set or unset a DataProduct to a list of entities

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchsetdataproductinput"><code>BatchSetDataProductInput!</code></a>
</td>
<td>
<p>Input for batch setting data product</p>
</td>
</tr>
</tbody>
</table>

## batchSetDomain

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Set domain for multiple Entities

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchsetdomaininput"><code>BatchSetDomainInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchUpdateDeprecation

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Updates the deprecation status for a batch of assets.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchupdatedeprecationinput"><code>BatchUpdateDeprecationInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchUpdateSoftDeleted

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Updates the soft deleted status for a batch of assets

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchupdatesoftdeletedinput"><code>BatchUpdateSoftDeletedInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## batchUpdateStepStates

**Type:** [BatchUpdateStepStatesResult!](/docs/graphql/objects#batchupdatestepstatesresult)

Batch update the state for a set of steps.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchupdatestepstatesinput"><code>BatchUpdateStepStatesInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## cancelIngestionExecutionRequest

**Type:** [String](/docs/graphql/scalars#string)

Cancel a running execution request, provided the urn of the original execution request

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#cancelingestionexecutionrequestinput"><code>CancelIngestionExecutionRequestInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createAccessToken

**Type:** [AccessToken](/docs/graphql/objects#accesstoken)

Generates an access token for DataHub APIs for a particular user & of a particular type

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createaccesstokeninput"><code>CreateAccessTokenInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createDataProduct

**Type:** [DataProduct](/docs/graphql/objects#dataproduct)

Create a new Data Product

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createdataproductinput"><code>CreateDataProductInput!</code></a>
</td>
<td>
<p>Inputs required to create a new DataProduct.</p>
</td>
</tr>
</tbody>
</table>

## createDomain

**Type:** [String](/docs/graphql/scalars#string)

Create a new Domain. Returns the urn of the newly created Domain. Requires the 'Create Domains' or 'Manage Domains' Platform Privilege. If a Domain with the provided ID already exists,
it will be overwritten.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createdomaininput"><code>CreateDomainInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createGlossaryNode

**Type:** [String](/docs/graphql/scalars#string)

Create a new GlossaryNode. Returns the urn of the newly created GlossaryNode. If a node with the provided ID already exists, it will be overwritten.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createglossaryentityinput"><code>CreateGlossaryEntityInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createGlossaryTerm

**Type:** [String](/docs/graphql/scalars#string)

Create a new GlossaryTerm. Returns the urn of the newly created GlossaryTerm. If a term with the provided ID already exists, it will be overwritten.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createglossaryentityinput"><code>CreateGlossaryEntityInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createGroup

**Type:** [String](/docs/graphql/scalars#string)

Create a new group. Returns the urn of the newly created group. Requires the Manage Users & Groups Platform Privilege

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#creategroupinput"><code>CreateGroupInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createIngestionExecutionRequest

**Type:** [String](/docs/graphql/scalars#string)

Create a request to execute an ingestion job
input: Input required for creating an ingestion execution request

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createingestionexecutionrequestinput"><code>CreateIngestionExecutionRequestInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createIngestionSource

**Type:** [String](/docs/graphql/scalars#string)

Create a new ingestion source

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateingestionsourceinput"><code>UpdateIngestionSourceInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createInviteToken

**Type:** [InviteToken](/docs/graphql/objects#invitetoken)

Create invite token

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createinvitetokeninput"><code>CreateInviteTokenInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createNativeUserResetToken

**Type:** [ResetToken](/docs/graphql/objects#resettoken)

Generates a token that can be shared with existing native users to reset their credentials.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createnativeuserresettokeninput"><code>CreateNativeUserResetTokenInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createOwnershipType

**Type:** [OwnershipTypeEntity](/docs/graphql/objects#ownershiptypeentity)

Create a Custom Ownership Type. This requires the 'Manage Ownership Types' Metadata Privilege.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createownershiptypeinput"><code>CreateOwnershipTypeInput!</code></a>
</td>
<td>
<p>Inputs required to create a new Query.</p>
</td>
</tr>
</tbody>
</table>

## createPolicy

**Type:** [String](/docs/graphql/scalars#string)

Create a policy and returns the resulting urn

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#policyupdateinput"><code>PolicyUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createPost

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Create a post

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createpostinput"><code>CreatePostInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createQuery

**Type:** [QueryEntity](/docs/graphql/objects#queryentity)

Create a new Query

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createqueryinput"><code>CreateQueryInput!</code></a>
</td>
<td>
<p>Inputs required to create a new Query.</p>
</td>
</tr>
</tbody>
</table>

## createSecret

**Type:** [String](/docs/graphql/scalars#string)

Create a new Secret

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createsecretinput"><code>CreateSecretInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createTag

**Type:** [String](/docs/graphql/scalars#string)

Create a new tag. Requires the 'Manage Tags' or 'Create Tags' Platform Privilege. If a Tag with the provided ID already exists,
it will be overwritten.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createtaginput"><code>CreateTagInput!</code></a>
</td>
<td>
<p>Inputs required to create a new Tag.</p>
</td>
</tr>
</tbody>
</table>

## createTest

**Type:** [String](/docs/graphql/scalars#string)

Create a new test

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createtestinput"><code>CreateTestInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createTestConnectionRequest

**Type:** [String](/docs/graphql/scalars#string)

Create a request to execute a test ingestion connection job
input: Input required for creating a test connection request

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createtestconnectionrequestinput"><code>CreateTestConnectionRequestInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## createView

**Type:** [DataHubView](/docs/graphql/objects#datahubview)

Create a new DataHub View (Saved Filter)

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#createviewinput"><code>CreateViewInput!</code></a>
</td>
<td>
<p>Input required to create a new DataHub View</p>
</td>
</tr>
</tbody>
</table>

## deleteAssertion

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove an assertion associated with an entity. Requires the 'Edit Assertions' privilege on the entity.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The assertion to remove</p>
</td>
</tr>
</tbody>
</table>

## deleteDataProduct

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete a DataProduct by urn.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>Urn of the data product to remove.</p>
</td>
</tr>
</tbody>
</table>

## deleteDomain

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete a Domain

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The urn of the Domain to delete</p>
</td>
</tr>
</tbody>
</table>

## deleteGlossaryEntity

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove a glossary entity (GlossaryTerm or GlossaryNode). Return boolean whether it was successful or not.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## deleteIngestionSource

**Type:** [String](/docs/graphql/scalars#string)

Delete an existing ingestion source

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## deleteOwnershipType

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete a Custom Ownership Type by urn. This requires the 'Manage Ownership Types' Metadata Privilege.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>Urn of the Custom Ownership Type to remove.</p>
</td>
</tr>
<tr>
<td>
deleteReferences<br />
<a href="/docs/graphql/scalars#boolean"><code>Boolean</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## deletePolicy

**Type:** [String](/docs/graphql/scalars#string)

Remove an existing policy and returns the policy urn

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## deletePost

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete a post

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## deleteQuery

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete a Query by urn. This requires the 'Edit Queries' Metadata Privilege.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>Urn of the query to remove.</p>
</td>
</tr>
</tbody>
</table>

## deleteSecret

**Type:** [String](/docs/graphql/scalars#string)

Delete a Secret

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## deleteTag

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete a Tag

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The urn of the Tag to delete</p>
</td>
</tr>
</tbody>
</table>

## deleteTest

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete an existing test - note that this will NOT delete dangling pointers until the next execution of the test.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## deleteView

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Delete a DataHub View (Saved Filter)

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The urn of the View to delete</p>
</td>
</tr>
</tbody>
</table>

## removeGroup

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove a group. Requires Manage Users & Groups Platform Privilege

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## removeGroupMembers

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove members from a group

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#removegroupmembersinput"><code>RemoveGroupMembersInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## removeLink

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove a link, or institutional memory, from a particular Entity

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#removelinkinput"><code>RemoveLinkInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## removeOwner

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove an owner from a particular Entity

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#removeownerinput"><code>RemoveOwnerInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## removeRelatedTerms

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove multiple related Terms for a Glossary Term

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#relatedtermsinput"><code>RelatedTermsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## removeTag

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove a tag from a particular Entity or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#tagassociationinput"><code>TagAssociationInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## removeTerm

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove a glossary term from a particular Entity or subresource

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#termassociationinput"><code>TermAssociationInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## removeUser

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Remove a user. Requires Manage Users & Groups Platform Privilege

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## reportOperation

**Type:** [String](/docs/graphql/scalars#string)

Report a new operation for an asset

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#reportoperationinput"><code>ReportOperationInput!</code></a>
</td>
<td>
<p>Input required to report an operation</p>
</td>
</tr>
</tbody>
</table>

## revokeAccessToken

**Type:** [Boolean!](/docs/graphql/scalars#boolean)

Revokes access tokens.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
tokenId<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## rollbackIngestion

**Type:** [String](/docs/graphql/scalars#string)

Rollback a specific ingestion execution run based on its runId

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#rollbackingestioninput"><code>RollbackIngestionInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## setDomain

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Sets the Domain for a Dataset, Chart, Dashboard, Data Flow (Pipeline), or Data Job (Task). Returns true if the Domain was successfully added, or already exists. Requires the Edit Domains privilege for the Entity.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
entityUrn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
domainUrn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## setTagColor

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Set the hex color associated with an existing Tag

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
colorHex<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## unsetDomain

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Sets the Domain for a Dataset, Chart, Dashboard, Data Flow (Pipeline), or Data Job (Task). Returns true if the Domain was successfully removed, or was already removed. Requires the Edit Domains privilege for an asset.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
entityUrn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateChart

**Type:** [Chart](/docs/graphql/objects#chart)

Update the metadata about a particular Chart

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#chartupdateinput"><code>ChartUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateCorpGroupProperties

**Type:** [CorpGroup](/docs/graphql/objects#corpgroup)

Update a particular Corp Group's editable properties

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#corpgroupupdateinput"><code>CorpGroupUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateCorpUserProperties

**Type:** [CorpUser](/docs/graphql/objects#corpuser)

Update a particular Corp User's editable properties

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#corpuserupdateinput"><code>CorpUserUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateCorpUserViewsSettings

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Update the View-related settings for a user.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updatecorpuserviewssettingsinput"><code>UpdateCorpUserViewsSettingsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateDashboard

**Type:** [Dashboard](/docs/graphql/objects#dashboard)

Update the metadata about a particular Dashboard

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#dashboardupdateinput"><code>DashboardUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateDataFlow

**Type:** [DataFlow](/docs/graphql/objects#dataflow)

Update the metadata about a particular Data Flow (Pipeline)

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#dataflowupdateinput"><code>DataFlowUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateDataJob

**Type:** [DataJob](/docs/graphql/objects#datajob)

Update the metadata about a particular Data Job (Task)

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#datajobupdateinput"><code>DataJobUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateDataProduct

**Type:** [DataProduct](/docs/graphql/objects#dataproduct)

Update a Data Product

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The urn identifier for the Data Product to update.</p>
</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updatedataproductinput"><code>UpdateDataProductInput!</code></a>
</td>
<td>
<p>Inputs required to create a new DataProduct.</p>
</td>
</tr>
</tbody>
</table>

## updateDataset

**Type:** [Dataset](/docs/graphql/objects#dataset)

Update the metadata about a particular Dataset

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#datasetupdateinput"><code>DatasetUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateDatasets

**Type:** [[Dataset]](/docs/graphql/objects#dataset)

Update the metadata about a batch of Datasets

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#batchdatasetupdateinput"><code>[BatchDatasetUpdateInput!]!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateDeprecation

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Sets the Deprecation status for a Metadata Entity. Requires the Edit Deprecation status privilege for an entity.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updatedeprecationinput"><code>UpdateDeprecationInput!</code></a>
</td>
<td>
<p>Input required to set deprecation for an Entity.</p>
</td>
</tr>
</tbody>
</table>

## updateDescription

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Incubating. Updates the description of a resource. Currently only supports Dataset Schema Fields, Containers

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#descriptionupdateinput"><code>DescriptionUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateEmbed

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Update the Embed information for a Dataset, Dashboard, or Chart.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateembedinput"><code>UpdateEmbedInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateGlobalViewsSettings

**Type:** [Boolean!](/docs/graphql/scalars#boolean)

Update the global settings related to the Views feature.
Requires the 'Manage Global Views' Platform Privilege.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateglobalviewssettingsinput"><code>UpdateGlobalViewsSettingsInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateIngestionSource

**Type:** [String](/docs/graphql/scalars#string)

Update an existing ingestion source

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateingestionsourceinput"><code>UpdateIngestionSourceInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateLineage

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Update lineage for an entity

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updatelineageinput"><code>UpdateLineageInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateName

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Updates the name of the entity.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updatenameinput"><code>UpdateNameInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateNotebook

**Type:** [Notebook](/docs/graphql/objects#notebook)

Update the metadata about a particular Notebook

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#notebookupdateinput"><code>NotebookUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateOwnershipType

**Type:** [OwnershipTypeEntity](/docs/graphql/objects#ownershiptypeentity)

Update an existing Query. This requires the 'Manage Ownership Types' Metadata Privilege.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The urn identifier for the custom ownership type to update.</p>
</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateownershiptypeinput"><code>UpdateOwnershipTypeInput!</code></a>
</td>
<td>
<p>Inputs required to update an existing Custom Ownership Type.</p>
</td>
</tr>
</tbody>
</table>

## updateParentNode

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Updates the parent node of a resource. Currently only GlossaryNodes and GlossaryTerms have parentNodes.

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateparentnodeinput"><code>UpdateParentNodeInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updatePolicy

**Type:** [String](/docs/graphql/scalars#string)

Update an existing policy and returns the resulting urn

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#policyupdateinput"><code>PolicyUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateQuery

**Type:** [QueryEntity](/docs/graphql/objects#queryentity)

Update an existing Query

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The urn identifier for the query to update.</p>
</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updatequeryinput"><code>UpdateQueryInput!</code></a>
</td>
<td>
<p>Inputs required to update a Query.</p>
</td>
</tr>
</tbody>
</table>

## updateTag

**Type:** [Tag](/docs/graphql/objects#tag)

Update the information about a particular Entity Tag

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#tagupdateinput"><code>TagUpdateInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateTest

**Type:** [String](/docs/graphql/scalars#string)

Update an existing test

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updatetestinput"><code>UpdateTestInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateUserSetting

**Type:** [Boolean](/docs/graphql/scalars#boolean)

Update a user setting

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateusersettinginput"><code>UpdateUserSettingInput!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateUserStatus

**Type:** [String](/docs/graphql/scalars#string)

Change the status of a user. Requires Manage Users & Groups Platform Privilege

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>

</td>
</tr>
<tr>
<td>
status<br />
<a href="/docs/graphql/enums#corpuserstatus"><code>CorpUserStatus!</code></a>
</td>
<td>

</td>
</tr>
</tbody>
</table>

## updateView

**Type:** [DataHubView](/docs/graphql/objects#datahubview)

Delete a DataHub View (Saved Filter)

<p style={{ marginBottom: "0.4em" }}><strong>Arguments</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
urn<br />
<a href="/docs/graphql/scalars#string"><code>String!</code></a>
</td>
<td>
<p>The urn of the View to update</p>
</td>
</tr>
<tr>
<td>
input<br />
<a href="/docs/graphql/inputObjects#updateviewinput"><code>UpdateViewInput!</code></a>
</td>
<td>
<p>Input required to updat an existing DataHub View</p>
</td>
</tr>
</tbody>
</table>
